--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: http://u.cubeupload.com/sandbrier/N7Algx.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: sandbrier@openmailbox.org
   facebook:
   flickr:
   github: sandbrier
